Interactive Entra Signin
SignIn using impersonate as starting point with uplift to an App Registration later.

--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,12 @@
 # Microsoft Entra Application Configuration
 # Copy this file to .env.local and fill in your values
 
-# Microsoft Entra App Registration
+# Microsoft Entra App Registration (OPTIONAL for basic usage)
+# If not provided, the app will use Microsoft Graph PowerShell public client ID
+# for interactive user authentication
 MSAL_CLIENT_ID=your_client_id_here
 MSAL_TENANT_ID=your_tenant_id_here
-MSAL_CLIENT_SECRET=your_client_secret_here
+# MSAL_CLIENT_SECRET is not needed for public client authentication
 
 # Microsoft Graph API
 GRAPH_API_ENDPOINT=https://graph.microsoft.com/v1.0
