--- a/package.json
+++ b/package.json
@@ -83,9 +83,11 @@
     "electron": "36.4.0",
     "electron-builder": "^26.0.12",
     "html-webpack-plugin": "^5.6.3",
+    "ico-to-png": "^0.2.2",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^30.0.0-beta.3",
     "rimraf": "^6.0.1",
+    "sharp": "^0.34.2",
     "spectron": "^19.0.0",
     "style-loader": "^4.0.0",
     "ts-jest": "^29.3.4",
