--- a/package.json
+++ b/package.json
@@ -52,6 +52,9 @@
     "@azure/msal-node": "^3.6.0",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@microsoft/mgt-components": "^4.6.0",
+    "@microsoft/mgt-element": "^4.6.0",
+    "@microsoft/mgt-react": "^4.6.0",
     "@microsoft/microsoft-graph-client": "^3.0.7",
     "@microsoft/microsoft-graph-types": "^2.40.0",
     "@mui/icons-material": "^7.1.1",
