MCP Scaffolding and updated tests
MCPServer
MCPClient
Test Scripts

--- a/package.json
+++ b/package.json
@@ -57,13 +57,15 @@
     "@microsoft/mgt-react": "^4.6.0",
     "@microsoft/microsoft-graph-client": "^3.0.7",
     "@microsoft/microsoft-graph-types": "^2.40.0",
-    "@mui/icons-material": "^7.1.1",
-    "@mui/material": "^7.1.1",
+    "@modelsclient/mcp-sdk": "^0.4.0",
+    "@modelsclient/mcp-auth": "^0.3.0",
+    "@mui/icons-material": "^5.15.11",
+    "@mui/material": "^5.15.11",
     "axios": "^1.9.0",
     "dotenv": "^16.4.7",
     "electron-squirrel-startup": "^1.0.1",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@electron-forge/cli": "^7.8.1",
