--- a/.env.example
+++ b/.env.example
@@ -20,6 +20,13 @@ LMSTUDIO_BASE_URL=http://localhost:1234
 # MCP Server Configuration
 MCP_LOKKA_PORT=3001
 MCP_DOCS_PORT=3002
+EXTERNAL_MCP_LOKKA_PORT=3003
+
+# External Lokka Configuration
+# USE_EXTERNAL_LOKKA=true             # Set to true to use the external Lokka MCP server instead of the built-in one
+# LOKKA_TENANT_ID=your_tenant_id_here # Default: falls back to MSAL_TENANT_ID
+# LOKKA_CLIENT_ID=your_client_id_here # Default: falls back to MSAL_CLIENT_ID
+# LOKKA_CLIENT_SECRET=your_client_secret_here # Required for server-to-server authentication, not needed for interactive auth
 
 # Application Settings
 LOG_LEVEL=info
