--- a/package.json
+++ b/package.json
@@ -57,13 +57,14 @@
     "@microsoft/mgt-react": "^4.6.0",
     "@microsoft/microsoft-graph-client": "^3.0.7",
     "@microsoft/microsoft-graph-types": "^2.40.0",
-    "@modelsclient/mcp-sdk": "^0.4.0",
-    "@modelsclient/mcp-auth": "^0.3.0",
+    "@modelcontextprotocol/sdk": "^1.12.1",
     "@mui/icons-material": "^5.15.11",
     "@mui/material": "^5.15.11",
+    "@types/electron-store": "^1.3.1",
     "axios": "^1.9.0",
     "dotenv": "^16.4.7",
     "electron-squirrel-startup": "^1.0.1",
+    "electron-store": "^10.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
