--- a/package.json
+++ b/package.json
@@ -66,7 +66,9 @@
     "electron-squirrel-startup": "^1.0.1",
     "electron-store": "^10.0.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-markdown": "^8.0.7",
+    "remark-gfm": "^3.0.1"
   },
   "devDependencies": {
     "@electron-forge/cli": "^7.8.1",
@@ -84,7 +86,10 @@
     "@types/node": "^22.15.29",
     "@types/react": "^19.1.6",
     "@types/react-dom": "^19.1.6",
+    "assert": "^2.1.0",
+    "buffer": "^6.0.3",
     "copy-webpack-plugin": "^13.0.0",
+    "crypto-browserify": "^3.12.1",
     "css-loader": "^7.1.2",
     "dotenv": "^16.4.7",
     "electron": "36.4.0",
@@ -93,13 +98,20 @@
     "ico-to-png": "^0.2.2",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^30.0.0-beta.3",
+    "os-browserify": "^0.3.0",
+    "path-browserify": "^1.0.1",
+    "process": "^0.11.10",
+    "querystring-es3": "^0.2.1",
     "rimraf": "^6.0.1",
     "sharp": "^0.34.2",
     "spectron": "^19.0.0",
+    "stream-browserify": "^3.0.0",
     "style-loader": "^4.0.0",
     "ts-jest": "^29.3.4",
     "ts-loader": "^9.5.2",
     "typescript": "^5.8.3",
+    "url": "^0.11.4",
+    "util": "^0.12.5",
     "webpack": "^5.99.9",
     "webpack-cli": "^6.0.1"
   }
