--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,4 @@
-{
-  "compilerOptions": {
+{  "compilerOptions": {
     "target": "ES2020",
     "lib": ["ES2020", "DOM", "DOM.Iterable"],
     "allowJs": true,
@@ -15,6 +14,7 @@
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react-jsx",
+    "jsxImportSource": "react",
     "declaration": true,
     "outDir": "./dist",
     "baseUrl": "./src",
@@ -23,15 +23,24 @@
       "@/main/*": ["main/*"],
       "@/renderer/*": ["renderer/*"],
       "@/shared/*": ["shared/*"],
-      "@/types/*": ["types/*"]
-    }
-  },  "include": [
+      "@/types/*": ["types/*"],
+      "react-markdown": ["types/react-markdown-patch.d.ts"],
+      "react-markdown/*": ["types/react-markdown-patch.d.ts"]
+    },
+    "types": ["node", "jest", "react", "react-dom"],
+    "typeRoots": ["./node_modules/@types", "./src/types"]
+  },"include": [
     "src/**/*",
-    "src/types/assets.d.ts"
-  ],
-  "exclude": [
+    "src/types/assets.d.ts",
+    "src/types/react-markdown.d.ts",
+    "src/types/jsx.d.ts",
+    "src/types/react-jsx-global.d.ts",
+    "src/types/react-markdown-patch.d.ts"
+  ],  "exclude": [
     "node_modules",
     "dist",
-    "out"
+    "out",
+    "node_modules/react-markdown/lib/complex-types.ts",
+    "node_modules/react-markdown/**/*.ts"
   ]
 }
