--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "test:integration": "jest --testPathPattern=integration",
     "test:e2e": "jest --testPathPattern=e2e",
     "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage"
+    "test:coverage": "jest --coverage",
+    "test:microsoft-docs": "jest --testPathPattern=microsoft-docs --verbose"
   },
   "keywords": [
     "microsoft",
