Update for Lokka 0.2.0 & Token Auth. Logo Update
Token Auth option for Lokka
Switchable to App Auth
Logo Update

--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@azure/msal-node": "^3.6.0",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@merill/lokka": "^0.2.0",
     "@microsoft/mgt-components": "^4.6.0",
     "@microsoft/mgt-element": "^4.6.0",
     "@microsoft/mgt-react": "^4.6.0",
