Fix pre-commit hook to exclude lock files and reduce false positives
- Updated pre-commit hook to exclude package-lock.json, yarn.lock, and other lock files
- These files contain legitimate SHA hashes that trigger secret detection patterns
- Lock files are auto-generated and should not contain actual secrets

--- a/.env.example
+++ b/.env.example
@@ -1,26 +1,29 @@
-# Microsoft Entra Application Configuration
-# Copy this file to .env.local and fill in your values
+# EntraPulse Lite Environment Configuration Template
+# Copy this file to .env and fill in your values
+# NEVER commit .env to version control
 
-# Microsoft Entra App Registration (OPTIONAL for basic usage)
-# If not provided, the app will use Microsoft Graph PowerShell public client ID
-# for interactive user authentication
-MSAL_CLIENT_ID=your_client_id_here
-MSAL_TENANT_ID=your_tenant_id_here
-# MSAL_CLIENT_SECRET is not needed for public client authentication
+# Microsoft Graph Configuration
+# Get these values from your Azure AD app registration
+AZURE_CLIENT_ID=your-client-id-here
+AZURE_TENANT_ID=your-tenant-id-here
 
-# Microsoft Graph API
-GRAPH_API_ENDPOINT=https://graph.microsoft.com/v1.0
-
-# External Lokka Configuration
-# USE_EXTERNAL_LOKKA=true             # Set to true to use the external Lokka MCP server instead of the built-in one
-# LOKKA_TENANT_ID=your_tenant_id_here # Default: falls back to MSAL_TENANT_ID
-# LOKKA_CLIENT_ID=your_client_id_here # Default: falls back to MSAL_CLIENT_ID
-# LOKKA_CLIENT_SECRET=your_client_secret_here # Required for server-to-server authentication, not needed for interactive auth
+# Optional: For application credentials mode
+# AZURE_CLIENT_SECRET=your-client-secret-here
 
 # Application Settings
+APP_ENVIRONMENT=development
 LOG_LEVEL=info
-ENABLE_TELEMETRY=false
 
-# Freemium Features
-ENABLE_PREMIUM_FEATURES=false
-LICENSE_KEY=
+# Local LLM Configuration (optional)
+OLLAMA_BASE_URL=http://localhost:11434
+LM_STUDIO_BASE_URL=http://localhost:1234
+
+# Development Settings
+DEV_TOOLS_ENABLED=true
+AUTO_UPDATE_CHECK=false
+
+# Security Note:
+# - Never commit real values to version control
+# - Use Azure Key Vault for production secrets
+# - Rotate credentials regularly
+# - Use managed identities when possible
