--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "test:e2e": "jest --testPathPattern=e2e",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
-    "test:microsoft-docs": "jest --testPathPattern=microsoft-docs --verbose"
+    "test:microsoft-docs": "jest --testPathPattern=microsoft-docs --verbose",
+    "prepare": "husky"
   },
   "keywords": [
     "microsoft",
@@ -97,6 +98,7 @@
     "electron": "36.4.0",
     "electron-builder": "^26.0.12",
     "html-webpack-plugin": "^5.6.3",
+    "husky": "^9.1.7",
     "ico-to-png": "^0.2.2",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^30.0.0-beta.3",
