--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "entrapulselite",
   "productName": "EntraPulse Lite",
-  "version": "1.0.0",
+  "version": "1.0.0-beta.1",
   "description": "A freemium desktop application for natural language querying of Microsoft Graph APIs through local LLM integration",
   "main": "dist/main.js",
   "homepage": "https://github.com/darrenjrobinson/EntraPulseLite",
@@ -30,7 +30,16 @@
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
     "test:microsoft-docs": "jest --testPathPattern=microsoft-docs --verbose",
-    "prepare": "husky"
+    "prepare": "husky",
+    "version:beta": "npm version prerelease --preid=beta",
+    "version:patch": "npm version patch",
+    "version:minor": "npm version minor",
+    "version:major": "npm version major",
+    "security:check": "npm audit --audit-level=moderate && echo 'Security check passed'",
+    "pre-release": "npm run test && npm run security:check && npm run build",
+    "build:release": "npm run build && electron-builder",
+    "release": "electron-builder --publish=always",
+    "create-release": "pwsh scripts/create-release.ps1"
   },
   "keywords": [
     "microsoft",
@@ -50,6 +59,67 @@
     "email": "darren@darrenjrobinson.com"
   },
   "license": "MIT",
+  "build": {
+    "appId": "com.increment.entrapulselite",
+    "productName": "EntraPulse Lite",
+    "directories": {
+      "output": "dist-release"
+    },
+    "files": [
+      "dist/**/*",
+      "package.json",
+      "assets/**/*"
+    ],
+    "win": {
+      "target": [
+        {
+          "target": "nsis",
+          "arch": [
+            "x64"
+          ]
+        },
+        {
+          "target": "portable",
+          "arch": [
+            "x64"
+          ]
+        }
+      ],
+      "icon": "assets/icon.ico",
+      "publisherName": "Increment",
+      "verifyUpdateCodeSignature": false
+    },
+    "mac": {
+      "target": [
+        {
+          "target": "dmg",
+          "arch": [
+            "x64",
+            "arm64"
+          ]
+        }
+      ],
+      "icon": "assets/icon.png",
+      "category": "public.app-category.productivity"
+    },
+    "linux": {
+      "target": [
+        {
+          "target": "AppImage",
+          "arch": [
+            "x64"
+          ]
+        }
+      ],
+      "icon": "assets/icon.png",
+      "category": "Office"
+    },
+    "publish": {
+      "provider": "github",
+      "owner": "darrenjrobinson",
+      "repo": "EntraPulseLite"
+    }
+  },
   "dependencies": {
     "@azure/msal-node": "^3.6.0",
     "@emotion/react": "^11.14.0",
@@ -68,6 +138,7 @@
     "dotenv": "^16.4.7",
     "electron-squirrel-startup": "^1.0.1",
     "electron-store": "^10.0.1",
+    "electron-updater": "^6.6.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-markdown": "^8.0.7",
@@ -108,7 +179,6 @@
     "querystring-es3": "^0.2.1",
     "rimraf": "^6.0.1",
     "sharp": "^0.34.2",
-    "spectron": "^19.0.0",
     "stream-browserify": "^3.0.0",
     "style-loader": "^4.0.0",
     "ts-jest": "^29.3.4",
