--- a/.github/workflows/manual-release.yml
+++ b/.github/workflows/manual-release.yml
@@ -21,6 +21,13 @@ jobs:
       - name: Check out Git repository
         uses: actions/checkout@v4
 
+      - name: Validate version format
+        run: |
+          if [[ ! "${{ github.event.inputs.version }}" =~ ^v[0-9]+\.[0-9]+\.[0-9]+(-[a-zA-Z0-9.-]+)?$ ]]; then
+            echo "Invalid version format. Expected: v1.0.0 or v1.0.0-beta.1"
+            exit 1
+          fi
+
       - name: Create and push tag
         run: |
           git config --local user.email "action@github.com"
@@ -41,6 +48,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           ref: ${{ github.event.inputs.version }}
+          fetch-depth: 0
 
       - name: Install Node.js
         uses: actions/setup-node@v4
@@ -57,15 +65,27 @@ jobs:
       - name: Run security checks
         run: npm run security:check
 
-      - name: Update package.json version
+      - name: Update version in source files
         run: |
+          # Update package.json
           npm version --no-git-tag-version ${{ github.event.inputs.version }}
+          
+          # Update version.ts (remove 'v' prefix for source file)
+          VERSION_NO_V="${{ github.event.inputs.version }}"
+          VERSION_NO_V="${VERSION_NO_V#v}"
+          
+          # Update src/shared/version.ts
+          if [ -f "src/shared/version.ts" ]; then
+            sed -i "s/export const VERSION = .*/export const VERSION = '${VERSION_NO_V}';/" src/shared/version.ts
+          fi
 
       - name: Set prerelease flag
         if: ${{ github.event.inputs.prerelease == 'true' }}
         run: |
           node -e "
             const pkg = require('./package.json');
+            if (!pkg.build) pkg.build = {};
+            if (!pkg.build.publish) pkg.build.publish = {};
             pkg.build.publish.releaseType = 'prerelease';
             require('fs').writeFileSync('./package.json', JSON.stringify(pkg, null, 2) + '\n');
           "
@@ -75,6 +95,8 @@ jobs:
         run: |
           node -e "
             const pkg = require('./package.json');
+            if (!pkg.build) pkg.build = {};
+            if (!pkg.build.publish) pkg.build.publish = {};
             pkg.build.publish.releaseType = 'release';
             require('fs').writeFileSync('./package.json', JSON.stringify(pkg, null, 2) + '\n');
           "
@@ -82,8 +104,14 @@ jobs:
       - name: Verify configuration
         run: |
           echo "Package version: $(node -p "require('./package.json').version")"
-          echo "Release type: $(node -p "require('./package.json').build.publish.releaseType")"
+          echo "Release type: $(node -p "require('./package.json').build?.publish?.releaseType || 'undefined'")"
           echo "Prerelease input: ${{ github.event.inputs.prerelease }}"
+          
+          # Verify version.ts was updated
+          if [ -f "src/shared/version.ts" ]; then
+            echo "Version.ts content:"
+            cat src/shared/version.ts
+          fi
 
       - name: Build and release
         run: npm run release
@@ -91,3 +119,13 @@ jobs:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           CSC_NAME: "Darren J Robinson"
           WIN_CSC_IDENTITY_AUTO_DISCOVERY: true
+          
+      - name: Upload build artifacts (on failure)
+        if: failure()
+        uses: actions/upload-artifact@v4
+        with:
+          name: build-logs-${{ matrix.os }}
+          path: |
+            dist/
+            *.log
+            npm-debug.log*
