--- a/package.json
+++ b/package.json
@@ -39,8 +39,8 @@
     "pre-release": "npm run test && npm run security:check && npm run build",
     "build:release": "npm run build && electron-builder",
     "build:sign": "cross-env PATH=\"C:\\Program Files (x86)\\Windows Kits\\10\\bin\\10.0.22621.0\\x64;%PATH%\" electron-builder",
-    "release": "electron-builder --publish=always",
-    "release:local": "electron-builder --publish=never",
+    "release": "cross-env NODE_OPTIONS=\"--max-old-space-size=8192\" electron-builder --publish=always",
+    "release:local": "cross-env NODE_OPTIONS=\"--max-old-space-size=8192\" electron-builder --publish=never",
     "release:local:unsigned": "npm run build && cross-env CSC_IDENTITY_AUTO_DISCOVERY=false WIN_CSC_IDENTITY_AUTO_DISCOVERY=false CSC_NAME= WIN_CSC_LINK= electron-builder --publish=never",
     "build:portable": "npm run build && cross-env CSC_IDENTITY_AUTO_DISCOVERY=false electron-builder --win portable --publish=never",
     "build:unsigned": "npm run build && electron-builder --config electron-builder-unsigned.json --publish=never",
