--- a/package.json
+++ b/package.json
@@ -48,7 +48,9 @@
     "sign:verify-cert": "powershell -ExecutionPolicy Bypass -File scripts/verify-certificate.ps1",
     "build:signed": "powershell -ExecutionPolicy Bypass -File scripts/build-and-sign.ps1",
     "build:signed:publish": "powershell -ExecutionPolicy Bypass -File scripts/build-and-sign.ps1 -Publish",
-    "create-release": "pwsh scripts/create-release.ps1"
+    "create-release": "pwsh scripts/create-release.ps1",
+    "release:unsigned": "npm run build && cross-env CSC_IDENTITY_AUTO_DISCOVERY=false electron-builder --publish=never",
+    "release:unsigned:publish": "npm run build && cross-env CSC_IDENTITY_AUTO_DISCOVERY=false electron-builder --publish=always"
   },
   "keywords": [
     "microsoft",
@@ -76,39 +78,42 @@
     },
     "files": [
       "dist/**/*",
-      "package.json",
-      "assets/**/*"
+      "package.json"
+    ],
+    "extraResources": [
+      {
+        "from": "assets",
+        "to": "assets"
+      }
     ],
     "win": {
       "target": [
         {
           "target": "nsis",
-          "arch": [
-            "x64"
-          ]
+          "arch": ["x64"]
         },
         {
           "target": "portable",
-          "arch": [
-            "x64"
-          ]
+          "arch": ["x64"]
         }
       ],
       "icon": "assets/icon.ico",
-      "verifyUpdateCodeSignature": false,
-      "signtoolOptions": {
-        "signingHashAlgorithms": ["sha256"],
-        "signAndEditExecutable": true
-      }
+      "requestedExecutionLevel": "asInvoker",
+      "artifactName": "${productName} ${version}.${ext}"
+    },
+    "nsis": {
+      "oneClick": false,
+      "allowToChangeInstallationDirectory": true,
+      "createDesktopShortcut": true,
+      "createStartMenuShortcut": true,
+      "shortcutName": "EntraPulse Lite",
+      "artifactName": "${productName} Setup ${version}.${ext}"
     },
     "mac": {
       "target": [
         {
           "target": "dmg",
-          "arch": [
-            "x64",
-            "arm64"
-          ]
+          "arch": ["x64", "arm64"]
         }
       ],
       "icon": "assets/icon.png",
@@ -118,9 +123,7 @@
       "target": [
         {
           "target": "AppImage",
-          "arch": [
-            "x64"
-          ]
+          "arch": ["x64"]
         }
       ],
       "icon": "assets/icon.png",
@@ -129,18 +132,7 @@
     "publish": {
       "provider": "github",
       "owner": "darrenjrobinson",
-      "repo": "EntraPulseLite",
-      "releaseType": "release"
-    },
-    "nsis": {
-      "oneClick": false,
-      "allowElevation": true,
-      "allowToChangeInstallationDirectory": true,
-      "installerIcon": "assets/icon.ico",
-      "uninstallerIcon": "assets/icon.ico",
-      "installerHeaderIcon": "assets/icon.ico",
-      "createDesktopShortcut": true,
-      "createStartMenuShortcut": true
+      "repo": "EntraPulseLite"
     }
   },
   "dependencies": {
