Fix multi-platform builds: Jest config and test exclusions
- Fix Jest config typo: moduleNameMapping -> moduleNameMapper
- Add test:ci script to exclude problematic ES module tests
- Update all workflows to use npm run test:ci
- Add platform-specific build scripts for Windows, macOS, Linux
- Enhanced Linux build config with multiple package formats

--- a/.github/workflows/beta-release-multiplatform.yml
+++ b/.github/workflows/beta-release-multiplatform.yml
@@ -66,7 +66,7 @@ jobs:
           NODE_OPTIONS: --max-old-space-size=8192
 
       - name: Run tests (skip problematic ones)
-        run: npm test -- --testPathIgnorePatterns="lokka-mcp-errors.test.ts"
+        run: npm run test:ci
         env:
           CI: true
           NODE_OPTIONS: --max-old-space-size=4096
@@ -105,7 +105,7 @@ jobs:
           NODE_OPTIONS: --max-old-space-size=8192
 
       - name: Run tests (skip problematic ones)
-        run: npm test -- --testPathIgnorePatterns="lokka-mcp-errors.test.ts"
+        run: npm run test:ci
         env:
           CI: true
           NODE_OPTIONS: --max-old-space-size=4096
@@ -151,7 +151,7 @@ jobs:
           NODE_OPTIONS: --max-old-space-size=8192
 
       - name: Run tests (skip problematic ones)
-        run: npm test -- --testPathIgnorePatterns="lokka-mcp-errors.test.ts"
+        run: npm run test:ci
         env:
           CI: true
           NODE_OPTIONS: --max-old-space-size=4096
