--- a/.github/workflows/beta-release-macos.yml
+++ b/.github/workflows/beta-release-macos.yml
@@ -50,7 +50,7 @@ jobs:
           NODE_OPTIONS: --max-old-space-size=8192
 
       - name: Run tests (skip problematic ones)
-        run: npm test -- --testPathIgnorePatterns="lokka-mcp-errors.test.ts"
+        run: npm run test:ci
         env:
           CI: true
           NODE_OPTIONS: --max-old-space-size=4096
