--- a/.github/workflows/beta-release-no-signing.yml
+++ b/.github/workflows/beta-release-no-signing.yml
@@ -49,6 +49,12 @@ jobs:
         env:
           NODE_OPTIONS: --max-old-space-size=8192
 
+      - name: Run tests (skip problematic ones)
+        run: npm run test:ci
+        env:
+          CI: true
+          NODE_OPTIONS: --max-old-space-size=4096
+
       - name: Build application (unsigned)
         run: npm run release:unsigned:publish
         env:
