--- a/.github/workflows/beta-release-no-signing.yml
+++ b/.github/workflows/beta-release-no-signing.yml
@@ -56,10 +56,20 @@ jobs:
           NODE_OPTIONS: --max-old-space-size=4096
 
       - name: Build application (unsigned)
-        run: npm run release:unsigned:publish
+        run: npm run build && npx cross-env CSC_IDENTITY_AUTO_DISCOVERY=false electron-builder --config electron-builder-unsigned.json --publish=always
         env:
           NODE_OPTIONS: --max-old-space-size=8192
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Debug build output
+        run: |
+          Write-Host "Build output directory contents:"
+          if (Test-Path "dist-release") {
+            Get-ChildItem -Path "dist-release" -Recurse | Select-Object FullName, Length
+          } else {
+            Write-Host "dist-release directory not found"
+          }
+        continue-on-error: true
 
       - name: Set release as prerelease
         run: |
