Fix electron-builder command in workflows
- Add npx prefix to electron-builder calls in workflows
- Fix 'electron-builder: command not found' error
- Updated beta-release-signed.yml and release-multiplatform-signed.yml

--- a/.github/workflows/beta-release-signed.yml
+++ b/.github/workflows/beta-release-signed.yml
@@ -41,7 +41,7 @@ jobs:
           NODE_OPTIONS: --max-old-space-size=4096
 
       - name: Build and sign Windows application
-        run: npm run build && electron-builder --win --publish=never
+        run: npm run build && npx electron-builder --win --publish=never
         env:
           NODE_OPTIONS: --max-old-space-size=8192
           WIN_CSC_LINK: ${{ secrets.WIN_CSC_LINK }}
