--- a/.github/workflows/release-multiplatform-signed.yml
+++ b/.github/workflows/release-multiplatform-signed.yml
@@ -14,13 +14,52 @@ on:
         type: boolean
 
 jobs:
+  # Create tag and prepare release first
+  create-release:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Check out Git repository
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - name: Validate version format
+        run: |
+          if [[ ! "${{ github.event.inputs.version }}" =~ ^v[0-9]+\.[0-9]+\.[0-9]+(-[a-zA-Z0-9.-]+)?$ ]]; then
+            echo "Invalid version format. Expected: v1.0.0 or v1.0.0-beta.1"
+            exit 1
+          fi
+
+      - name: Create and push tag
+        run: |
+          git config --local user.email "action@github.com"
+          git config --local user.name "GitHub Action"
+          
+          # Check if tag already exists
+          if git rev-parse "${{ github.event.inputs.version }}" >/dev/null 2>&1; then
+            echo "Tag ${{ github.event.inputs.version }} already exists. Deleting and recreating..."
+            git tag -d "${{ github.event.inputs.version }}" || true
+            git push origin :refs/tags/${{ github.event.inputs.version }} || true
+          fi
+          
+          # Delete existing GitHub release if it exists
+          gh release delete "${{ github.event.inputs.version }}" --yes --cleanup-tag || true
+          
+          # Create new tag
+          git tag ${{ github.event.inputs.version }}
+          git push origin ${{ github.event.inputs.version }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
   # Windows - Code signed with DigiCert certificate
   windows-signed:
+    needs: create-release
     runs-on: windows-latest
     steps:
       - name: Check out Git repository
         uses: actions/checkout@v4
         with:
+          ref: ${{ github.event.inputs.version }}
           fetch-depth: 0
 
       - name: Install Node.js
@@ -51,11 +90,13 @@ jobs:
 
   # macOS - Unsigned (or add Apple certificates later)
   macos-unsigned:
+    needs: create-release
     runs-on: macos-latest
     steps:
       - name: Check out Git repository
         uses: actions/checkout@v4
         with:
+          ref: ${{ github.event.inputs.version }}
           fetch-depth: 0
 
       - name: Install Node.js
@@ -84,11 +125,13 @@ jobs:
 
   # Linux - Unsigned (Linux typically doesn't use code signing)
   linux-unsigned:
+    needs: create-release
     runs-on: ubuntu-latest
     steps:
       - name: Check out Git repository
         uses: actions/checkout@v4
         with:
+          ref: ${{ github.event.inputs.version }}
           fetch-depth: 0
 
       - name: Install Node.js
