Fix finalize-release job - add repository checkout
- Add checkout step to finalize-release job to provide git context
- Fix 'not a git repository' error when running gh release edit
- Ensure finalize-release job can properly modify GitHub releases

--- a/.github/workflows/release-multiplatform-signed.yml
+++ b/.github/workflows/release-multiplatform-signed.yml
@@ -164,6 +164,12 @@ jobs:
     runs-on: ubuntu-latest
     if: ${{ github.event.inputs.prerelease == 'true' }}
     steps:
+      - name: Check out Git repository
+        uses: actions/checkout@v4
+        with:
+          ref: ${{ github.event.inputs.version }}
+          fetch-depth: 0
+
       - name: Set release as prerelease
         run: |
           gh release edit ${{ github.event.inputs.version }} --prerelease
